--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
 		"preview": "vite preview"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-auto": "^2.0.1",
+		"@sveltejs/adapter-node": "^1.2.4",
 		"@sveltejs/kit": "^1.5.0",
 		"@tailwindcss/forms": "^0.5.3",
 		"autoprefixer": "^10.4.14",
 		"carbon-icons-svelte": "^11.4.0",
 		"postcss": "^8.4.21",
-		"svelte": "^3.54.0",
+		"svelte": "^3.55.0",
 		"tailwindcss": "^3.2.7",
 		"vite": "^4.2.0"
 	},
@@ -28,5 +29,8 @@
 		"nanoevents": "^7.0.1",
 		"svelte-websocket-store": "^1.1.33",
 		"uuid": "^9.0.0"
+	},
+	"engines": {
+		"node": ">=16.14"
 	}
 }
