--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	"type": "module",
 	"dependencies": {
 		"@popperjs/core": "^2.11.7",
+		"@sveltejs/adapter-vercel": "^3.0.0",
 		"classnames": "^2.3.2",
 		"flowbite": "^1.6.5",
 		"flowbite-svelte": "^0.34.9",
