--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.1",
@@ -14,9 +16,13 @@
 		"@tailwindcss/forms": "^0.5.3",
 		"autoprefixer": "^10.4.14",
 		"carbon-icons-svelte": "^11.4.0",
+		"chalk": "^5.2.0",
 		"postcss": "^8.4.21",
 		"svelte": "^3.55.0",
+		"svelte-check": "^3.3.2",
 		"tailwindcss": "^3.2.7",
+		"tslib": "^2.5.2",
+		"typescript": "^5.0.4",
 		"vite": "^4.2.0"
 	},
 	"type": "module",
